wp-content/themes/Pim/css/app.css
/** Happyvan CSS **/

/** Override Bootstrap **/
body{
	color: #0C3045;
	background-color: #F2E9E1;
	padding: 0;
}

a {
	/*color: #397591;*/
	color: #004276;
}

legend {
  line-height: 20px !important;
  margin-bottom: 0 !important;
  width: initial !important;
  border-style: initial !important;
}

.nav{
	margin-bottom: 8px;
}

.navbar{
	margin-bottom: 0;
}

/*******************/


/********   ADD-ON TO BOOTSTRAP ******/
@media (min-width: 480px) {
    [class*="push"], [class*="pull"] {
        position: relative;
    }
}
@media (min-width: 768px) and (max-width: 979px) {
    .push1 { left: 62px; }
    .push2 { left: 124px; }
    .push3 { left: 186px; }
    .push4 { left: 248px; }
    .push5 { left: 310px; }
    .push6 { left: 372px; }
    .push7 { left: 434px; }
    .push8 { left: 496px; }
    .push9 { left: 558px; }
    .push10 { left: 620px; }
    .push11 { left: 682px; }
    .pull1 { left: -62px; }
    .pull2 { left: -124px; }
    .pull3 { left: -186px; }
    .pull4 { left: -248px; }
    .pull5 { left: -310px; }
    .pull6 { left: -372px; }
    .pull7 { left: -434px; }
    .pull8 { left: -496px; }
    .pull9 { left: -558px; }
    .pull10 { left: -620px; }
    .pull11 { left: -682px; }
}
@media (min-width: 980px) and (max-width: 1199px) {
    .push1 { left: 80px; }
    .push2 { left: 160px; }
    .push3 { left: 240px; }
    .push4 { left: 320px; }
    .push5 { left: 400px; }
    .push6 { left: 480px; }
    .push7 { left: 560px; }
    .push8 { left: 640px; }
    .push9 { left: 720px; }
    .push10 { left: 800px; }
    .push11 { left: 880px; }
    .pull1 { left: -80px; }
    .pull2 { left: -160px; }
    .pull3 { left: -240px; }
    .pull4 { left: -320px; }
    .pull5 { left: -400px; }
    .pull6 { left: -480px; }
    .pull7 { left: -560px; }
    .pull8 { left: -640px; }
    .pull9 { left: -720px; }
    .pull10 { left: -800px; }
    .pull11 { left: -880px; }
}
@media (min-width: 1200px) {
    .push1 { left: 100px; }
    .push2 { left: 200px; }
    .push3 { left: 300px; }
    .push4 { left: 400px; }
    .push5 { left: 500px; }
    .push6 { left: 600px; }
    .push7 { left: 700px; }
    .push8 { left: 800px; }
    .push9 { left: 900px; }
    .push10 { left: 1000px; }
    .push11 { left: 1100px; }
    .pull1 { left: -100px; }
    .pull2 { left: -200px; }
    .pull3 { left: -300px; }
    .pull4 { left: -400px; }
    .pull5 { left: -500px; }
    .pull6 { left: -600px; }
    .pull7 { left: -700px; }
    .pull8 { left: -800px; }
    .pull9 { left: -900px; }
    .pull10 { left: -1000px; }
    .pull11 { left: -1100px; }
}

ul.thumbnails li.span4:nth-child(3n + 4) {
  margin-left : 0px;
}

ul.thumbnails li.span3:nth-child(4n + 5) {
  margin-left : 0px;
}

ul.thumbnails li.span12 + li {
  margin-left : 0px;
}



.top-bar{
	max-width: 960px;
	margin: 0 auto;
	/**border-bottom: #0055BF 3px solid;**/
	border-bottom: 1px solid black;
	background-color: #C6E1FC;
}

.navbar-inner{
	border-radius: 0;
}

#webname{
	font-size: 31px;
	padding-top: 4px;
}

.main{
	-moz-box-shadow: 0 5px 10px #888;
	-webkit-box-shadow: 0 5px 10px #888;
	box-shadow: 0 5px 10px #888;
	/**background: url("../../images/back.png") repeat scroll 0 0 #F4F6F9;**/
	background-color: #FEFEFE;
}

.container-fluid{
	max-width: 960px;
	margin: 0 auto;
	padding-left: 20px;
	padding-right: 20px;
}

#wrapper{
	max-width: 960px;
	margin: 0 auto;
	-moz-box-shadow: 0 5px 10px #888;
	-webkit-box-shadow: 0 5px 10px #888;
	box-shadow: 0 5px 10px #888;
	background-color: white;
	padding-top: 10px
}

.brand{
	color: #0C3045;
}

/**** TOP NAV ****/
#navbar .nav-pills > li > a{
	border-radius: 0;
	border: 1px solid #0A2A3C;
}

.nav-pills > .active > a, .nav-pills > .active > a:hover, .nav-pills > .active > a:focus{
	background-color: #0A2A3C;
}

@media (max-width: 600px) {
	#navbar .nav-tabs > li, .nav-pills > li{
		width: 100%;
		text-align: center;
	}

	#navbar .nav-pills > li > ul {
		width: 98%;
	} 
	
}

#crumbs{
	display: none;
}

#myCarousel{
	margin-bottom: 0;
}

._ad_top{
	padding-top: 5px;
	padding-bottom: 5px;
}

.widgettitle{
	max-width: 370px;
	line-height: 15px;
	padding-left: 5px;
	margin: 0;
	font-size: 14px;
	height:25px;
	background:url("../images/bg.png") 0 -49px;
}

.posts a.top{
	font-size: 20px;
	font-weight: bold;
}

/*
#homepageTab{
	margin-bottom: 8px;
	padding: 0;
}*/

#homepage_popular .widgettitle{
	display: none;
}

#homepage_recent .posts > li{
	border: 0;
	padding: 0;
	margin: 0;
}

#homepage_recent .bold{
	font-weight: bold;
}

#homepage_recent .title{
	overflow: hidden;
	text-overflow: ellipsis;
	width: 100%;
}

#homepage_recent .ago{
	font-size: 10px;
	color: gray;
}

.homepage_category .bullet, .homepage_popular .bullet{
	list-style-type: circle;
}


#category .content{
	height: 60px;
	overflow: hidden;
	text-overflow: ellipsis;
}

#category img.thumbnail{
	border: 0 none;
	padding: 0;
	padding-top: 3px;
}

/**** BBPress Forum ****/
#bbpress-forums *{
	font-size: 13px;
}

#bbpress-forums ul.bbp-lead-topic, #bbpress-forums ul.bbp-topics, #bbpress-forums ul.bbp-forums, #bbpress-forums ul.bbp-replies{
	border: 1px solid #0C3045;
}

#bbpress-forums .bbp-reply-form, #bbpress-forums .bbp-topic-form-create{
	display: none;
}

#bbpress-forums ul.super-sticky > .bbp-topic-title > a{
	color: orange;
}

#bbpress-forums ul.super-sticky > .bbp-topic-title > a{
	color: red;
}

#bbpress-forums li.bbp-header, #bbpress-forums li.bbp-footer{
	background: none repeat scroll 0 0 #397591;
	color: #D1C5A2;
	border: 0;
}

#bbpress-forums .bbp-header a{
	color: #D1C5A2;
}

#comments #bbp_reply{
	width: 100%;
	font-size: 150%;
	line-height: 150%;
}

/**** Search Box ****/
.search_box
{
	display: block;
	width: 150px;
	height: 25px;
	float: right;
	margin: 7px 0 0 0;
	background: transparent url("../../images/search_bg.png") no-repeat top left;
}

.search_box input, .search_box input:hover
{
	width: 100px;
	margin: 1px 0 0 30px;
	background: transparent;
	border: 0;
}

.search_box input.blur
{
	color: #999;
	font-style: italic;
}

/**** AD ****/
.ad img{
	border: 1px solid black;
}

/**** QUICK VIEW ****/

.quick_view_wrapper
{
	width:750px;height:450px;background:#f5f5f5;padding:20px;overflow-y:auto;overflow-x: hidden;
}

.post_wrapper
{
	width: 100%;
	margin: 0 0 20px 0;
}

.post_wrapper.single
{
	width: 100%;
	margin: 0;
}

.sidebar_widget, .widget{
	list-style: none;
	margin: 0;
	overflow: hidden;
	padding-bottom: 10px;
}


.ui-state-active, .ui-state-default, .ui-widget-content{
	background: none repeat scroll 0 0 transparent;
	border: 0 none;
}

.wide_thumbail .post_content{

}

.narrow_thumbnail .post_content{
	width: 100%;
}

.thumb, .home .sidebar_widget li .textwidget .thumb, .sidebar .content .sidebar_widget li ul.thumb
{
	list-style: none;
	display: block;
	float: left;
	width: 100%;
	margin-left: 0;
}

.thumb li a
{
	display: block;
	float: left;
}

.thumb img
{
	float: left;
	display: block;
	width: 60px;
}

#about_the_author .thumb img
{
	float: left;
	display: block;
	width: 100px;
}

.thumb li
{
	float: left;
	display: block;
	margin: 0 8px 8px 0;
	clear: none;
}

.sidebar .content .sidebar_widget li ul.posts
{
	list-style: none;
	padding: 0 0 40px 0;
}

.sidebar .content .sidebar_widget li ul.posts, .home .sidebar_widget li ul.posts
{
	margin: 0;
	list-style: none;
}

.sidebar_widget .post_content{
	overflow: hidden;
}

.posts li, .sidebar .content .sidebar_widget li ul.posts li
{
	padding: 0 0 5px 0;
}

.posts .top{
	/*border-bottom: 1px solid gray;*/
}


@-moz-document url-prefix() { .sidebar .content .sidebar_widget li ul.posts, .home .sidebar_widget li ul.posts.comments { padding-top: 0; } } 

@-moz-document url-prefix() { .sidebar .content .sidebar_widget li ul.posts li, .home .sidebar_widget li ul.posts.comments li { padding: 0 0 0 0; } } 

.posts
{
	list-style: none;
}

.posts .thumbnail
{
	float: left;
	margin: 0 7px 7px 0;
}

.posts.related img.thumbnail
{
	margin: 0 15px 15px 0;
}

.posts li, .sidebar .content .sidebar_widget li ul.posts li
{
	margin: 0 0 10px 0;
}

.social_media
{
	list-style: none;
	float: left;
	width: 100%;
	display: block;
	margin: 20px 0;
}

.social_media li
{
	float: left;
	display: block;
	margin-right: 10px;
}


/****** POST / PAGE ******/
#post_title{
	font-family: '微软雅黑';
    font-size: 26px;
    padding-bottom: 15px;
    padding-top: 15px;
}

#post_detail{
	color: #666666;
	font-size: 10px;
}


.footer {
    background-color: #F5F5F5;
    border-top: 1px solid #E5E5E5;
    padding: 30px 0;
    text-align: center;
}
.footer p {
    color: #777777;
    margin-bottom: 0;
}
.footer-links {
    margin: 10px 0;
}
.footer-links li {
    display: inline;
    padding: 0 2px;
}
.footer-links li:first-child {
    padding-left: 0;
}

#footer
{
	text-align: center;
	padding: 0 0 30px 0;
	font-size: 11px;
	font-weight: bold;
	margin-top: 30px;
	text-shadow: 0 1px 1px #fff;
}

#footer a
{
	color: #999;
}

#footer ul
{
	display: block;
	margin: auto;
	list-style: none;
	text-align: left;
	font-weight: normal;
}

#footer ul li.widget
{
	float: left;
	width: 17%;
	margin-right: 3%;
}

#footer ul li.widget .widgettitle
{
	margin: 0 0 20px 0;
	font-size: 20px;
	text-shadow: 0 1px 1px transparent;
}

#footer ul li.widget ul
{
	width: 100%;
	float: left;
}

#footer ul li.widget ul li
{
	margin: 0 0 10px 0;
}

#footer
{
	background: #555 url('../../images/bg_ip2.png') repeat-x top;
	text-shadow: 0 0 0 transparent;
	width: 960px;
	margin: 0 auto;
}

#footer .widgettitle
{
	color: #fff;
	font-weight: normal;
}

#footer .posts img
{
	width: 50px;
}

#footer .posts h6
{
	font-size: 16px;
	color: #fff;
}

/********   MOBILE SPECIFIC *******/
@media only screen and (max-width: 767px){
	.quick_view{
		display: none;
	}
}

/********   HIDE STUFF ********/
.quick_view{
	display: none;
}

